# coinexTool

./: .gitignore  CMakeLists.txt  README.md
include/CompleteConfidence/: Socket.h  WebSocket.h  base64.cpp  sha1.cpp  sha1.h
include/LeftMyCodes/: MyCodes.cpp  MyCodes.h
include/easylogging/: easylogging++.cc  easylogging++.h
src/: MD5.cpp  MD5.h  client.cpp  client.h  curlPost.cpp  curlPost.h  main.cpp  server.cpp  server.h
